# Shake.it.off

./: .atom-build.yml  .gitignore  .travis.yml  LICENSE  README.md  Shake.it.off.cabal  ShakeItOff.cabal  install.bat  shake.it.hs  stack.yaml
src/: Main.hs  Script.hs  Shake.hs
src/Shake/It/: C.hs  Core.hs  FileSystem.hs  Global.hs  Haskell.hs  Js.hs  Off.hs  Optional.hs  Rust.hs  Utils.hs  Version.hs
src/Shake/It/C/: CMake.hs  Make.hs  QMake.hs
src/Shake/It/FileSystem/: Dir.hs  File.hs  Misc.hs
src/Shake/It/Haskell/: Cabal.hs  GHC.hs  Stack.hs
src/Shake/It/Rust/: Cargo.hs
