name:           ShakeItOff
version:        0.1.0
license:        BSD3
category:       Development

build-type:     Simple
cabal-version:  >= 1.8

library
  Hs-Source-Dirs: src
  exposed-modules:
      Shake.It.Off
  Other-Modules:
      Shake.It.Core
      Shake.It.Global
      Shake.It.Version
      Shake.It.C.CMake
      Shake.It.C
      Shake.It.Haskell.GHC
      Shake.It.Haskell.Cabal
      Shake.It.Haskell.Stack
      Shake.It.Haskell
      Paths_ShakeItOff
  Build-Depends:
      base
    , process
    , directory
    , filepath
    , time
    , eternal
    , turtle

Executable    shake
  Main-Is:    Main.hs
  Hs-Source-Dirs: src
  Other-Modules:
    Shake
    Script

  Build-Depends:
      base
    , process
    , directory
    , filepath
    , time
    , eternal
    , turtle
    , MissingH
    , ShakeItOff

  if !os(windows)
    Build-Depends:
      unix
