name:           ShakeItOff
version:        0.2.7
license:        BSD3
category:       Development

build-type:     Simple
cabal-version:  >= 1.8

library
  Hs-Source-Dirs: src
  exposed-modules:
      Shake.It.Off
  Other-Modules:
      Shake.It.Optional
      Shake.It.Core
      Shake.It.Global
      Shake.It.Version
      Shake.It.FileSystem.File
      Shake.It.FileSystem.Dir
      Shake.It.FileSystem
      Shake.It.C.Make
      Shake.It.C.CMake
      Shake.It.C.QMake
      Shake.It.C
      Shake.It.Rust.Cargo
      Shake.It.Rust
      Shake.It.Haskell.GHC
      Shake.It.Haskell.Cabal
      Shake.It.Haskell.Stack
      Shake.It.Haskell
      Shake.It.Js
      Shake.It.Utils
      Paths_ShakeItOff
  Build-Depends:
      base
    , process
    , split
    , directory
    , filepath
    , time
    , eternal

Executable    shake
  Main-Is:    Main.hs
  Hs-Source-Dirs: src
  Other-Modules:
    Shake
    Script
    -- shake it off modules
    Shake.It.Off
    Shake.It.Optional
    Shake.It.Core
    Shake.It.Global
    Shake.It.Version
    Shake.It.FileSystem.File
    Shake.It.FileSystem.Dir
    Shake.It.FileSystem
    Shake.It.C.Make
    Shake.It.C.CMake
    Shake.It.C.QMake
    Shake.It.C
    Shake.It.Rust.Cargo
    Shake.It.Rust
    Shake.It.Haskell.GHC
    Shake.It.Haskell.Cabal
    Shake.It.Haskell.Stack
    Shake.It.Haskell
    Shake.It.Js
    Shake.It.Utils
    Paths_ShakeItOff

  Build-Depends:
      base
    , process
    , split
    , directory
    , filepath
    , time
    , eternal
    , MissingH
    , ShakeItOff

  if !os(windows)
    Build-Depends:
      unix
